--- a/Server/package.json
+++ b/Server/package.json
@@ -50,6 +50,9 @@
     "not ie <= 8"
   ],
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "http": "^0.0.0",
     "moment": "^2.22.2",
     "puppeteer": "^1.7.0",
     "yargs": "^11.0.0"
