--- a/Server/package.json
+++ b/Server/package.json
@@ -55,6 +55,8 @@
     "http": "^0.0.0",
     "moment": "^2.22.2",
     "puppeteer": "^1.7.0",
+    "url-parse": "^1.4.3",
+    "url-regex": "^4.1.1",
     "yargs": "^11.0.0"
   }
 }
