--- a/Publish/.npmignore
+++ b/Publish/.npmignore
@@ -1,7 +1,10 @@
+node_modules/*
+.idea/*
+npm-debug.log
+example/*
+example/.*
 .DS_Store
 node_modules/
-/dist/
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
@@ -15,12 +18,3 @@ selenium-debug.log
 *.ntvs*
 *.njsproj
 *.sln
-
-static/config.json
-cache/*
-!./cache/.gitkeep
-
-publish/*
-!publish/package.json
-!publish/yarn.lock
-!publish/.npmignore
