--- a/Server/package.json
+++ b/Server/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cache-manager": "^2.9.0",
+    "cache-manager-fs": "^1.0.6",
     "express": "^4.16.3",
     "http": "^0.0.0",
     "moment": "^2.22.2",
