--- a/Server/package.json
+++ b/Server/package.json
@@ -8,10 +8,10 @@
     "dev": "npm run build; npm run start",
     "unit": "node node_modules/mocha-webpack/bin/mocha-webpack test/unit/specs/**/*.js --webpack-config build/webpack.test.conf.js",
     "unit:single": "node node_modules/mocha-webpack/bin/mocha-webpack --webpack-config build/webpack.test.conf.js",
-    "start": "node dist/app.js",
-    "build": "node build/build.js",
-    "prod": "node build/build.js --prod",
-    "prod:clean": "rm -rf prod/*"
+    "start": "node dist/server.js",
+    "build": "node build/build.js; npm run build:client",
+    "build:client": "node build/build-client.js",
+    "prod": "rm -rf ../Publish/dist/; npm run build; cp -r dist ../Publish; cp ../README.md ../Publish"
   },
   "devDependencies": {
     "babel-loader": "^7.1.1",
