--- a/Server/static/config.json
+++ b/Server/static/config.json
@@ -3,8 +3,8 @@
     "http://localhost:8081"
   ],
   "cache": {
-    "ttl": 60,
+    "ttl": 600,
     "maxsize": 1000
   },
-  "debug": false
+  "debug": true
 }
