--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,7 @@
     "start": "node dist/server.js",
     "build": "node build/build.js; npm run build:client",
     "build:client": "node build/build-client.js",
-    "prod": "rm -rf ../Publish/dist/; npm run build; cp -r dist ../Publish; cp ../README.md ../Publish"
+    "prod": "node build/build.js --prod; node build/build-client.js --prod"
   },
   "devDependencies": {
     "babel-loader": "^7.1.1",
