--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "puppeteer-server-side-render",
+  "name": "puppeteer-server-side-render-service",
   "version": "1.0.0",
   "description": "A server side render service based on puppeteer",
-  "main": "dist/client.js",
   "scripts": {
     "start": "node dist/server.js"
   },
@@ -21,5 +20,18 @@
   "bugs": {
     "url": "https://github.com/ciao-chung/puppeteer-server-side-render/issues"
   },
-  "homepage": "https://github.com/ciao-chung/puppeteer-server-side-render#readme"
+  "homepage": "https://github.com/ciao-chung/puppeteer-server-side-render#readme",
+  "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "body-parser": "^1.18.3",
+    "cache-manager": "^2.9.0",
+    "cache-manager-fs": "^1.0.6",
+    "express": "^4.16.3",
+    "http": "^0.0.0",
+    "moment": "^2.22.2",
+    "puppeteer": "^1.7.0",
+    "url-parse": "^1.4.3",
+    "url-regex": "^4.1.1",
+    "yargs": "^12.0.1"
+  }
 }
