--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A server side render service based on puppeteer",
   "scripts": {
-    "start": "node dist/server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
