--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.3",
     "cache-manager": "^2.9.0",
     "cache-manager-fs": "^1.0.6",
+    "chalk": "^2.4.1",
     "express": "^4.16.3",
     "http": "^0.0.0",
     "moment": "^2.22.2",
