set private property of package.json

--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "puppeteer-server-side-render-service",
   "version": "1.0.0",
+  "private": true,
   "description": "A server side render service based on puppeteer",
   "scripts": {
     "start": "node server.js",
