keep server cache folder

--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -5,7 +5,7 @@
   "description": "A server side render service based on puppeteer",
   "scripts": {
     "start": "node server.js",
-    "cache:clean": "rm -rf cache"
+    "cache:clean": "rm -rf cache/*"
   },
   "repository": {
     "type": "git",
