--- a/Prod/Server/package.json
+++ b/Prod/Server/package.json
@@ -29,8 +29,10 @@
     "cache-manager": "^2.9.0",
     "cache-manager-fs": "^1.0.6",
     "chalk": "^2.4.1",
+    "detect-port": "^1.3.0",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "kill-port": "^1.3.2",
     "moment": "^2.22.2",
     "puppeteer": "^1.7.0",
     "url-parse": "^1.4.3",
