--- a/Server/package.json
+++ b/Server/package.json
@@ -54,8 +54,10 @@
     "body-parser": "^1.18.3",
     "cache-manager": "^2.9.0",
     "cache-manager-fs": "^1.0.6",
+    "detect-port": "^1.3.0",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "kill-port": "^1.3.2",
     "moment": "^2.22.2",
     "puppeteer": "^1.7.0",
     "url-parse": "^1.4.3",
