--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,20 +1,2 @@
-.DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
-selenium-debug.log
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
 cache/*
-!./cache/.gitkeep
+!cache/.gitkeep
