--- a/Server/package.json
+++ b/Server/package.json
@@ -1,67 +1,26 @@
 {
-  "name": "base-nodejs-webpack-app",
+  "name": "ciao-ssr",
   "version": "1.0.0",
-  "description": "base-nodejs webpack app",
+  "description": "A prerender service which base on puppetter",
   "author": "Ciao Chung <ciao0958@gmail.com>",
-  "private": true,
   "license": "MIT",
-  "scripts": {
-    "dev": "npm run build; npm run start",
-    "unit": "node node_modules/mocha-webpack/bin/mocha-webpack test/unit/specs/**/*.js --webpack-config build/webpack.test.conf.js",
-    "unit:single": "node node_modules/mocha-webpack/bin/mocha-webpack --webpack-config build/webpack.test.conf.js",
-    "start": "node dist/server.js",
-    "build": "node build/build.js",
-    "prod:client": "node build/build-client.js --prod",
-    "prod:server": "node build/build.js --prod"
+  "bin": {
+    "ciao-ssr": "./index.js"
   },
-  "devDependencies": {
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "chai": "^4.1.2",
-    "chalk": "^2.4.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "inject-loader": "^3.0.0",
-    "mocha": "^5.1.1",
-    "mocha-webpack": "^1.1.0",
-    "node-notifier": "^5.1.2",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-shell-plugin": "^0.5.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "dependencies": {
     "body-parser": "^1.18.3",
     "cache-manager": "^2.9.0",
-    "cache-manager-fs": "^1.0.6",
+    "cache-manager-fs": "^1.0.7",
+    "chalk": "^2.4.2",
     "detect-port": "^1.3.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "http": "^0.0.0",
     "kill-port": "^1.3.2",
-    "moment": "^2.22.2",
-    "puppeteer": "^1.7.0",
-    "url-parse": "^1.4.3",
+    "moment": "^2.23.0",
+    "puppeteer": "1.3",
+    "shelljs": "^0.8.3",
+    "url-parse": "^1.4.4",
     "url-regex": "^4.1.1",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.5"
   }
 }
