--- a/Server/package.json
+++ b/Server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciao-ssr",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-beta",
   "description": "A prerender service which base on puppetter",
   "author": "Ciao Chung <ciao0958@gmail.com>",
   "license": "MIT",
