--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "cache-manager": "^2.9.0",
     "cache-manager-fs": "^1.0.7",
+    "cache-manager-redis-store": "^2.0.0",
     "chalk": "^2.4.2",
     "detect-port": "^1.3.0",
     "express": "^4.16.4",
